<resources>
    <string name="app_name">Budget</string>
    <string name="to">To</string>
    <string name="creditedTo">Credited to</string>
    <string name="debitedTo">Debited to</string>
    <string name="transact">Transact</string>
    <string name="dateOfTrans">Date</string>
    <string name="from">From</string>
    <string name="comment">Comment</string>
    <string name="analysis">Balance sheet</string>
    <string name="addSalary">Add Salary</string>
    <string name="setting">Settings</string>
    <string name="tList">Transactions List</string>
    <string name="amount">Amount</string>
    <string name="title_activity_app_settings1">Settings</string>
    <string name="investment">Investment</string>
    <string name="expenditure">Expenditure</string>
    <string name="source">Source</string>
    <string name="btf">BTF</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="preference_file_key">com.kmb.budget.preferenceFile</string>
    <string name="showMonthly">showMonthly</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_app_settings">Settings</string>
    <string name="title_activity_add_category">Add Category</string>
    <string name="category_name">Category Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add Category</string>
    <string name="title_activity_temp">temp</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_analysis">Balance Sheet</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="exportTransactions">Export Transactions</string>
    <string name="list_category">List Category</string>
    <string name="title_activity_list_category">List Category</string>
    <string name="title_activity_export_transactions">Export Transactions</string>
    <string name="showAnalysis">Analysis</string>
    <string name="title_activity_show_chart">Show Chart</string>
    <string name="title_activity_budget_setting">Budget Setting</string>
    <string name="title_activity_add_income">Add Income</string>
    <string name="title_activity_list_in_ex">Income/Expenses</string>
</resources>
