<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/toText"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/to"
        android:textColor="#000000"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/to" />

    <TextView
        android:id="@+id/fromText"
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/from"
        android:textColor="#000000"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toText"
        tools:text="@string/from" />

    <Spinner
        android:id="@+id/toDropdown"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/toText"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/fromDropdown"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/fromText"
        app:layout_constraintTop_toBottomOf="@+id/toDropdown" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="205dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/comment"
        android:ems="10"
        android:hint="@string/comment"
        android:inputType="textMultiLine|textPersonName"
        android:singleLine="false"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromText" />

    <Button
        android:id="@+id/transDate"
        android:layout_width="146dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:autofillHints="@string/dateOfTrans"
        android:ems="10"
        android:hint="@string/dateOfTrans"
        android:onClick="showDatePickerDialog"
        android:text="@string/dateOfTrans"
        app:layout_constraintStart_toEndOf="@+id/comment"
        app:layout_constraintTop_toBottomOf="@+id/fromDropdown" />

    <Button
        android:id="@+id/button"
        android:layout_width="157dp"
        android:layout_height="61dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="36dp"
        android:hint="@string/transact"
        android:onClick="addTransaction"
        android:text="@string/transact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transDate" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="115dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="20dp"
        android:onClick="goToAnalysis"
        android:text="@string/analysis"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="115dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:onClick="goToTransactions"
        android:text="@string/tList"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="115dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="75dp"
        android:onClick="goToSettings"
        android:text="@string/setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="150dp"
        android:layout_height="115dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="75dp"
        android:onClick="addSalary"
        android:text="@string/addSalary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="181dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:hint="@string/amount"
        android:inputType="numberSigned|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment" />

</androidx.constraintlayout.widget.ConstraintLayout>